--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Conexao com o database H2
+spring.datasource.url=jdbc:h2:mem:people-management
+spring.datasource.username=sa
+spring.datasource.password=
 
+# Cliente web H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configuração JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
