--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # Conexao com o database H2
-spring.datasource.url=jdbc:h2:mem:people-management
+spring.datasource.url=jdbc:h2:file:~/people-management
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # Cliente web H2
 spring.h2.console.enabled=true
@@ -10,3 +11,4 @@ spring.h2.console.path=/h2-console
 # Configucao JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
