Adicionado log para registrar as operações do sistema com SLF4J

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Configuracao Swagger
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.groups-order=DESC
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.use-root-path=true
+
