Adicionado configuração do swagger para acessar o endpoint da vps onde estará rodando a aplicação. Adicionado volume no docker-compose para acesso aos arquivos de log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Configuracao Swagger
 springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.config-url=/api/peoplemanagement/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/api/peoplemanagement/v3/api-docs
 springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.groups-order=DESC
 springdoc.swagger-ui.operations-sorter=method
