Editado busca de pessoas por cidade para uma busca que contenha o valor desejado ignorande o case

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - 8083:8080
     restart: always
     volumes:
-      - /app/peoplemanagement/logs:/logs
+      - C:/Users/dougl/Documents/codes/peoplemanagement/logs:/logs
