--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,15 +9,15 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
-# Configucao JPA
+# Configuracao JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Configuracao Swagger
 springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.swagger-ui.config-url=/api/peoplemanagement/v3/api-docs/swagger-config
-springdoc.swagger-ui.url=/api/peoplemanagement/v3/api-docs
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.groups-order=DESC
 springdoc.swagger-ui.operations-sorter=method
